--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
     <section>
         <div class="image-container d-block d-sm-none">
-            <img src="Images/About.jpg" alt="The Twelfth House Astrologer Headshot">
+            <img src="images/about.jpg" alt="The Twelfth House Astrologer Headshot">
             <h1 class="overlay-text">The 12th House Astrologer</h1>
         </div>
     </section>
     <section>
         <div class="image-container-2 container-fluid d-none d-sm-block">
-            <img src="Images/About.jpg" alt="The Twelfth House Astrologer Headshot">
+            <img src="images/about.jpg" alt="The Twelfth House Astrologer Headshot">
         </div>
     </section>
     <section class="introduction">
@@ -153,13 +153,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="Images/Carousel1.png" class="carousel-image d-block w-100" alt="Review 1">
+                    <img src="images/Carousel1.png" class="carousel-image d-block w-100" alt="Review 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="Images/Carousel2.png" class="d-block w-100" alt="Review 2">
+                    <img src="images/Carousel2.png" class="d-block w-100" alt="Review 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="Images/Carousel4.png" class="d-block w-100" alt="Review 3">
+                    <img src="images/Carousel4.png" class="d-block w-100" alt="Review 3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -186,13 +186,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="Images/Carousel-sm-1.png" class="carousel-image d-block w-100" alt="Review 1">
+                    <img src="images/Carousel-sm-1.png" class="carousel-image d-block w-100" alt="Review 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="Images/Carousel-sm-2.png" class="d-block w-100" alt="Review 2">
+                    <img src="images/Carousel-sm-2.png" class="d-block w-100" alt="Review 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="Images/Carousel-sm-3.png" class="d-block w-100" alt="Review 3">
+                    <img src="images/Carousel-sm-3.png" class="d-block w-100" alt="Review 3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2"
@@ -219,13 +219,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="Images/Carousel-md-1.png" class="carousel-image d-block w-100" alt="Review 1">
+                    <img src="images/Carousel-md-1.png" class="carousel-image d-block w-100" alt="Review 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="Images/Carousel-md-2.png" class="d-block w-100" alt="Review 2">
+                    <img src="images/Carousel-md-2.png" class="d-block w-100" alt="Review 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="Images/Carousel-md-3.png" class="d-block w-100" alt="Review 3">
+                    <img src="images/Carousel-md-3.png" class="d-block w-100" alt="Review 3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators3"
@@ -252,13 +252,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="Images/Carousel-lg-1.png" class="carousel-image d-block w-100" alt="Review 1">
+                    <img src="images/Carousel-lg-1.png" class="carousel-image d-block w-100" alt="Review 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="Images/Carousel-lg-2.png" class="d-block w-100" alt="Review 2">
+                    <img src="images/Carousel-lg-2.png" class="d-block w-100" alt="Review 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="Images/Carousel-lg-3.png" class="d-block w-100" alt="Review 3">
+                    <img src="images/Carousel-lg-3.png" class="d-block w-100" alt="Review 3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators4"
@@ -285,13 +285,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="Images/Carousel-xl-1.png" class="carousel-image d-block w-100" alt="Review 1">
+                    <img src="images/Carousel-xl-1.png" class="carousel-image d-block w-100" alt="Review 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="Images/Carousel-xl-2.png" class="d-block w-100" alt="Review 2">
+                    <img src="images/Carousel-xl-2.png" class="d-block w-100" alt="Review 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="Images/Carousel-xl-3.png" class="d-block w-100" alt="Review 3">
+                    <img src="images/Carousel-xl-3.png" class="d-block w-100" alt="Review 3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators5"
